--- a/cyclope/templates/contact_form/contact_form.html
+++ b/cyclope/templates/contact_form/contact_form.html
@@ -5,6 +5,7 @@
 <div id="contact" class="user_input">
 {{ instructions|smart_style }}
 <form action="{% url contact_form %}" method="post">
+  {% csrf_token %}
   {{ form.as_p }}
   <input type="submit" class="submit" value="{% trans "Send" %}" />
 </form>
