--- a/cyclope/templates/registration/password_change_form.html
+++ b/cyclope/templates/registration/password_change_form.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="user_input">
-<form enctype="multipart/form-data" method="post">
+<form enctype="multipart/form-data" method="post">{% csrf_token %}
   {{ form.as_p }}
   <p class="submit">
     <input type="submit" name="post" class="submit" value="{% trans "Send data" %}" />
