--- a/cyclope/templates/registration/password_reset_form.html
+++ b/cyclope/templates/registration/password_reset_form.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div id="content_container">
-  <form action="" method="post">
+  <form action="" method="post">{% csrf_token %}
       <h3>{% trans "Forgot your password?" %}</h3>
       <p>
           {% trans "Enter your e-mail address in the form below and we will send you a link for resetting your password." %}
