--- a/cyclope/templates/registration/registration_form.html
+++ b/cyclope/templates/registration/registration_form.html
@@ -4,8 +4,7 @@
 {% block content%}
 <div class="frontend_login">
 <h4 class="title">{% trans "Please fill in your user profile data" %}</h4>
-<form action="" method="post">
-{% csrf_token %}
+<form action="" method="post">{% csrf_token %}
 {{ form }}
 <p class="submit"><input type="submit" name="post" class="submit" value="{% trans "Register" %}"/></p>
 </form>
